--- a/routes/administration.html
+++ b/routes/administration.html
@@ -1,7 +1,23 @@
 
                   <section>
+                    <img src="HoPolloT1.png">
+                    <p>HoPolloT1</p>
+                  </section>
+                  <section>
+                    <img src="HoPolloT2.png">
+                    <p>HoPolloT2</p>
+                  </section>
+                  <section>
+                    <img src="HoPolloT3.png">
+                    <p>HoPolloT3</p>
+                  </section>
+                  <section>
                     <embed src="sample.pdf">
-                  </Section><footer>
+                  </Section>
+                  <section>
+                    <img src="SEKeyTutorial.png">
+                    <p>SEKeyTutorial</p>
+                  </section><footer>
 	<h1 id='horloge'>Horloge indisponible pour le moment.</h1>
 </footer>
 
