--- a/routes/cdi.html
+++ b/routes/cdi.html
@@ -1,11 +1,18 @@
 
                   <section>
+                    <embed src="POLLOZEC_EmploiDuTemps.pdf">
+                  </Section>
+                  <section>
                     <img src="Corail Mayotte.jpg">
                     <p>Corail Mayotte</p>
                   </section>
                   <section>
                     <img src="Mayotte sur la carte.png">
                     <p>Mayotte sur la carte</p>
+                  </section>
+                  <section>
+                    <img src="d287044b1ff26a86c79759c492e28f12_preview_featured.jpg">
+                    <p>d287044b1ff26a86c79759c492e28f12_preview_featured</p>
                   </section>
                   <section>
                     <img src="IlotBouzi.jpg">
