--- a/routes/viesco.html
+++ b/routes/viesco.html
@@ -1,4 +1,8 @@
 
+                  <section>
+                    <img src="Bobine.jpg">
+                    <p>Bobine</p>
+                  </section>
                 <section>
                   <video autoplay loop>
                   <source src="movie.mp4">
