--- a/lib/about.html
+++ b/lib/about.html
@@ -8,10 +8,10 @@
 
 <ul>
   <li><b>Afficheur Public</b></li>
-  <li>Version : 1</li>
+  <li>Version : 1.4</li>
   <li>Git Repo : <a href="https://github.com/hopollo/AfficheurPublic">Manual Updates</a></li>
   <li>Author : <a href="https://www.twitter.com/hopollotv" about="_blank">@HoPolloTV</a></li>
-  <li><b>NodeJS + HTTP + Express + FS + Node-Watch + sockets.io</b>
+  <li><b>NodeJS + HTTP + Express + FS + Node-Watch + Sockets.io + Compression + Helmet</b>
   <li>Usage : <b>npm run server</b></li>
 </ul>
 
