--- a/lib/defaultPageSkeletton.html
+++ b/lib/defaultPageSkeletton.html
@@ -1,3 +1,10 @@
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+
 <footer>
 	<h1 id='horloge'>Horloge indisponible pour le moment.</h1>
 </footer>
@@ -18,6 +25,7 @@
 
 	section img {
     height: 80vh;
+    max-width: 100vw;
     display: block;
     margin-left: auto;
     margin-right: auto;
