Added fetched version to github repo

--- a/lib/about.html
+++ b/lib/about.html
@@ -8,17 +8,25 @@
 
 <ul>
   <li><b>Afficheur Public</b></li>
-  <li>Version : 1.4 | <span id="lastestVersion"></span></li>
-  <li>Git Repo : <a href="https://github.com/hopollo/AfficheurPublic">Manual Updates</a></li>
-  <li>Author : <a href="https://www.twitter.com/hopollotv" about="_blank">@HoPolloTV</a></li>
-  <li><b>NodeJS + HTTP + Express + FS + Node-Watch + Sockets.io + Compression + Helmet</b>
+  <li id='version'>Version : 1.4</li>
+  <li>Author : <a href="https://www.twitter.com/hopollotv" target="_blank">@HoPolloTV</a></li>
+  <a href="https://streamelements.com/hopollo/tip" target="_blank"><button>Donate</button></a>
   <li>Usage : <b>npm run server</b></li>
 </ul>
 
 <script>
-  fetch('https://raw.githubusercontent.com/hopollo/AfficheurPublic/master/public/exterieur/Horaires%20Bus.txt', { 
-    mode: 'no-cors'
+  fetch('https://raw.githubusercontent.com/hopollo/AfficheurPublic/master/version')
+  .then(res => res.text())
+  .then(fetchedVersion => {
+    const versionLabel = document.getElementById('version');
+    const span = document.createElement('span');
+    span.id = 'lastestVersion';
+    span.append(document.createTextNode(' | Last : '));
+    const a = document.createElement('a');
+    a.href = "https://github.com/hopollo/AfficheurPublic.git";
+    a.appendChild(document.createTextNode(fetchedVersion));
+    span.appendChild(a);
+    versionLabel.appendChild(span);
   })
-  .then(data => console.log(data))
   .catch(err => console.error(err));
 </script>
