Added target blank on version

--- a/lib/about.html
+++ b/lib/about.html
@@ -8,7 +8,7 @@
 
 <ul>
   <li><b>Afficheur Public</b></li>
-  <li id='version'>Version : 1.4</li>
+  <li id='version'>Version : 2.0</li>
   <li>Author : <a href="https://www.twitter.com/hopollotv" target="_blank">@HoPolloTV</a></li>
   <a href="https://streamelements.com/hopollo/tip" target="_blank"><button>Donate</button></a>
   <li>Usage : <b>npm run server</b></li>
@@ -24,6 +24,7 @@
     span.append(document.createTextNode(' | Last : '));
     const a = document.createElement('a');
     a.href = "https://github.com/hopollo/AfficheurPublic.git";
+    a.target = "_blank";
     a.appendChild(document.createTextNode(fetchedVersion));
     span.appendChild(a);
     versionLabel.appendChild(span);
