added autofetch version

--- a/lib/about.html
+++ b/lib/about.html
@@ -8,26 +8,32 @@
 
 <ul>
   <li><b>Afficheur Public</b></li>
-  <li id='version'>Version : 2.0</li>
+  <li id='version'></li>
   <li>Author : <a href="https://www.twitter.com/hopollotv" target="_blank">@HoPolloTV</a></li>
+  <li>Usage : <b>npm run server</b> or <b>node server</b></li>
   <a href="https://streamelements.com/hopollo/tip" target="_blank"><button>Donate</button></a>
-  <li>Usage : <b>npm run server</b></li>
 </ul>
 
 <script>
+  const versionLabel = document.getElementById('version');
+
+  fetch('about/version')
+    .then(res => res.json())
+    .then(data => versionLabel.appendChild(document.createTextNode('Version : ' + data)))
+    .catch(err => console.error(err))
+
   fetch('https://raw.githubusercontent.com/hopollo/AfficheurPublic/master/version')
-  .then(res => res.text())
-  .then(fetchedVersion => {
-    const versionLabel = document.getElementById('version');
-    const span = document.createElement('span');
-    span.id = 'lastestVersion';
-    span.append(document.createTextNode(' | Last : '));
-    const a = document.createElement('a');
-    a.href = "https://github.com/hopollo/AfficheurPublic.git";
-    a.target = "_blank";
-    a.appendChild(document.createTextNode(fetchedVersion));
-    span.appendChild(a);
-    versionLabel.appendChild(span);
-  })
-  .catch(err => console.error(err));
+    .then(res => res.text())
+    .then(fetchedVersion => {
+      const span = document.createElement('span');
+      span.id = 'lastestVersion';
+      span.append(document.createTextNode(' | Last : '));
+      const a = document.createElement('a');
+      a.href = "https://github.com/hopollo/AfficheurPublic.git";
+      a.target = "_blank";
+      a.appendChild(document.createTextNode(fetchedVersion));
+      span.appendChild(a);
+      versionLabel.appendChild(span);
+    })
+    .catch(err => console.error(err));
 </script>
