--- a/lib/upload.html
+++ b/lib/upload.html
@@ -19,7 +19,7 @@
 <body>
   <div>
     <h1>Ajout(s) de Fichier(s)</h1>
-    <input type="file" name="files" id="fileInput" accept="image/*,.pdf,.gif,video/*" multiple/>
+    <input type="file" name="files" id="fileInput" accept="image/*,.pdf,.txt,.gif,video/*" multiple/>
     Identifiant : <input id='idInput' type="text">
     Mot de passe : <input id='passInput' type="password">
 
