--- a/lib/admin.html
+++ b/lib/admin.html
@@ -31,6 +31,7 @@
       border: none;
       outline: none;
       cursor: pointer;
+      transition: 0.3s;
       padding: 14px 16px;
       font-size: 17px;
       width: 25%;
